--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,5 +9,5 @@ phases:
   build:
     commands:
       - echo "Starting serverless deployment"
-      - serverless deploy --stage $ENVIRONMENT --region $REGION --conceal --verbose
+      - serverless deploy 
       - echo "Finished deployment"
