--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,8 @@ phases:
       - npm install --silent --no-progress -g serverless
   pre_build:
     commands:
-      - echo "Logging into Serverless Framework"
-      - serverless login
+      - echo "Configuring Serverless Framework with license key"
+      - serverless config credentials --provider aws --key $SERVERLESS_ACCESS_KEY
   build:
     commands:
       - echo "Starting serverless deployment"
